# rtnetlink

./: .gitignore  .rustfmt.toml  CHANGELOG  Cargo.toml
.github/workflows/: build.yml  clippy-rustfmt.yml  license.yml  main.yml  msrv.yml
examples/: add_address.rs  add_neighbour.rs  add_netns.rs  add_netns_async.rs  add_route.rs  add_route_ecmp.rs  add_route_mpls.rs  add_route_pref_src.rs  add_route_seg6.rs  add_rule.rs  add_tc_qdisc_ingress.rs  create_bond.rs  create_bridge.rs  create_dummy.rs  create_ipip.rs  create_ipvlan.rs  create_ipvtap.rs  create_macvlan.rs  create_macvtap.rs  create_netkit.rs  create_netkit_advanced.rs  create_vlan.rs  create_vrf.rs  create_vxcan.rs  create_vxlan.rs  create_wireguard.rs  create_xfrm.rs  del_address.rs  del_link.rs  del_netns.rs  del_netns_async.rs  flush_addresses.rs  get_address.rs  get_bond_port_settings.rs  get_links.rs  get_links_async.rs  get_links_thread_builder.rs  get_neighbours.rs  get_route.rs  get_route_default.rs  (+15 more)
src/: connection.rs  errors.rs  handle.rs  lib.rs  macros.rs  multicast.rs  ns.rs
src/addr/: add.rs  builder.rs  del.rs  get.rs  handle.rs  mod.rs
src/link/: add.rs  bond.rs  bond_port.rs  bridge.rs  bridge_port.rs  bridge_vlan.rs  builder.rs  del.rs  dummy.rs  get.rs  handle.rs  hsr.rs  ip6tnl.rs  ip_vlan.rs  ip_vtap.rs  iptun.rs  mac_vlan.rs  mac_vtap.rs  macsec.rs  mod.rs  netkit.rs  nlmon.rs  property_add.rs  property_del.rs  set.rs  set_bond_port.rs  test.rs  veth.rs  vlan.rs  vrf.rs  vxcan.rs  vxlan.rs  wireguard.rs  xfrm.rs
src/neighbour/: add.rs  del.rs  get.rs  handle.rs  mod.rs
(+27 files in other folders)
