[package]
name = "rtnetlink"
version = "0.13.1"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
edition = "2018"
homepage = "https://github.com/rust-netlink/rtnetlink"
keywords = ["netlink", "ip", "linux"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-netlink/rtnetlink"
description = "manipulate linux networking resources via netlink"

[features]
test_as_root = []
default = ["tokio_socket"]
tokio_socket = ["netlink-proto/tokio_socket", "tokio"]
smol_socket = ["netlink-proto/smol_socket", "async-global-executor"]

[dependencies]
futures = "0.3.11"
log = "0.4.8"
thiserror = "1"
netlink-sys = { version = "0.8" }
netlink-packet-utils = { version = "0.5" }
netlink-packet-route = { version = "0.17" }
netlink-packet-core = { version = "0.7" }
netlink-proto = { default-features = false, version = "0.11" }
nix = { version = "0.27.1", default-features = false, features = ["fs", "mount", "sched", "signal"] }
tokio = { version = "1.0.1", features = ["rt"], optional = true}
async-global-executor = { version = "2.0.2", optional = true }

[dev-dependencies]
env_logger = "0.10.0"
ipnetwork = "0.18.0"
tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
async-std = { version = "1.9.0", features = ["attributes"]}
